light/dark mode fix

--- a/src/index.css
+++ b/src/index.css
@@ -71,7 +71,7 @@
   --color-icon-muted: #6B6B6B;
   --color-icon-disabled: #AEAEB2;
   --color-dropdown-bg: #FFFFFF;
-  --color-dropdown-border: #D1D1D6;
+  --color-dropdown-border: #C7C7CC;
 }
 
 * {
